--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
           <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/sample_dance_1.mp4"
+            <source src="./static/videos/d1.mp4"
                     type="video/mp4">
           </video>
         </div>
